--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vuepress/client": "2.0.0-beta.48",
-    "@vuepress/plugin-nprogress": "2.0.0-beta.48",
-    "@vuepress/theme-default": "2.0.0-beta.48",
-    "vue": "3.2.36",
     "vuepress": "2.0.0-beta.48"
   },
   "devDependencies": {
-    "vuepress-plugin-blog2": "2.0.0-beta.85"
+    "vuepress-plugin-blog2": "2.0.0-beta.85",
+    "@vuepress/plugin-nprogress": "2.0.0-beta.48",
+    "@vuepress/theme-default": "2.0.0-beta.48"
   }
 }
