--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
+    "baiduPush": "node utils/baiduPush.js https://github.com/Buzhifanji/leetcode-book && bash baiduPush.sh",
     "deploy": "bash deploy.sh"
   },
   "keywords": [],
