--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vuepress": "2.0.0-beta.48"
-  },
-  "devDependencies": {
-    "vuepress-plugin-blog2": "2.0.0-beta.85",
-    "@vuepress/plugin-nprogress": "2.0.0-beta.48",
-    "@vuepress/theme-default": "2.0.0-beta.48"
+    "vuepress": "^2.0.0-beta.48",
+    "vuepress-theme-reco": "^2.0.0-beta.19"
   }
 }
