--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "leetcode-book",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "刷leetcode笔记",
+  "license": "MIT",
   "scripts": {
-    "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "clean": "vuepress dev docs --clean-cache",
+    "dev": "vuepress dev docs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "vuepress": "^2.0.0-beta.48",
-    "vuepress-theme-reco": "^2.0.0-beta.19"
+  "devDependencies": {
+    "@vuepress/client": "^2.0.0-beta.49",
+    "@vuepress/plugin-search": "2.0.0-beta.49",
+    "vue": "^3.2.36",
+    "vuepress": "^2.0.0-beta.49",
+    "vuepress-theme-hope": "^2.0.0-beta.87"
   }
 }
